Fixes email invalid bug

--- a/Tyvj.Migration/Views/Home/Step4.cshtml
+++ b/Tyvj.Migration/Views/Home/Step4.cshtml
@@ -26,7 +26,7 @@
                     <input type="hidden" class="incsub-mailchimp-field" name="username" value="@ViewBag.Username" />
                     }
                     
-                    @if (ViewBag.Invalid)
+                    @if (ViewBag.EmailInvalid)
                     {
                     <input type="text" class="incsub-mailchimp-field" placeholder="电子邮箱" name="email" />
                     }
