Fixes cached problem bug

--- a/Tyvj.Migration/Views/Home/Index.cshtml
+++ b/Tyvj.Migration/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="newsletter-content">
                 <h2 class="newsletter-content-title">将Tyvj账号资料迁移至 Joy OI中</h2>
-                <p class="newsletter-content-subtitle">全新的Joy OI平台已经上线，通过本平台可将您的Tyvj账户资料迁移至全新的Joy OI中。</p>
+                <p class="newsletter-content-subtitle">全新的<a style="text-decoration:underline;position:relative;z-index:999" href="http://www.joyoi.cn">Joy OI</a>平台已经上线，通过本平台可将您的Tyvj账户资料迁移至全新的Joy OI中。</p>
                 <form method="post" action="/Home/Step2">
                     <input type="text" class="incsub-mailchimp-field" placeholder="输入您的手机号码..." name="phone" required="" />
                     <input type="submit" class="incsub-mailchimp-submit" value="下一步" />
