--- a/Tyvj.Migration/Views/Home/Step4.cshtml
+++ b/Tyvj.Migration/Views/Home/Step4.cshtml
@@ -28,7 +28,7 @@
                     
                     @if (ViewBag.EmailInvalid)
                     {
-                    <input type="text" class="incsub-mailchimp-field" placeholder="电子邮箱" name="email" />
+                    <input type="email" class="incsub-mailchimp-field" placeholder="电子邮箱" name="email" />
                     }
                     else
                     {
